feat: add g1gc with xmx1g, xms1g